Fixed typo in Referring to where the Data exists within the Labs

--- a/Labs/00 - Introduction.ipynb
+++ b/Labs/00 - Introduction.ipynb
@@ -1799,7 +1799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most commonly we create DataFrame structures by reading csv files. To run the following piece of code you will need the datasets associated with the course: these should have been downloaded with the code, and will exist under ```iaml_%COURSE_YEAR%/datasets```. To access them, we make use of the handy os-tools provided to move up two places from the current directory:"
+    "Most commonly we create DataFrame structures by reading csv files. To run the following piece of code you will need the datasets associated with the course: these should have been downloaded with the code, and will exist adjacent to this notebook (i.e. within the `Labs` sub-directory):"
    ]
   },
   {
@@ -1810,7 +1810,7 @@
    },
    "outputs": [],
    "source": [
-    "cpu_loc = os.path.join(os.getcwd(), '../../datasets', 'cpu.csv')\n",
+    "cpu_loc = os.path.join(os.getcwd(), 'datasets', 'cpu.csv')\n",
     "cpu_loc"
    ]
   },
