--- a/Labs/04 - Clustering and PCA.ipynb
+++ b/Labs/04 - Clustering and PCA.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "### ========== Question 1.1 ==========\n",
-    "1. With pandas, read the csv dataset located at '../../datasets/landsat.csv'\n",
+    "1. With pandas, read the csv dataset located at './datasets/landsat.csv'\n",
     "1. Split the data into the features `X` (pandas dataframe), and the labels `y` (easier to make it a numpy array)\n",
     "1. Give it a once over\n",
     "    * Get a feel for the size\n",
