--- a/Labs/01 - Analysis and Visualisation.ipynb
+++ b/Labs/01 - Analysis and Visualisation.ipynb
@@ -139,7 +139,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase.shape[1]\n"
    ]
   },
   {
@@ -157,7 +158,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase.shape[0]\n"
    ]
   },
   {
@@ -175,7 +177,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase.describe()\n"
    ]
   },
   {
@@ -217,7 +220,12 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase.drop([\"capital_run_length_average\", \"capital_run_length_longest\", \n",
+    "                          \"capital_run_length_total\"], axis=1, inplace=True)\n",
+    "## or, less efficiently\n",
+    "# spambase = spambase.drop([\"capital_run_length_average\", \"capital_run_length_longest\", \n",
+    "#                           \"capital_run_length_total\"], axis=1)\n"
    ]
   },
   {
@@ -235,7 +243,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase.shape[1]\n"
    ]
   },
   {
@@ -280,7 +289,11 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "ax = sns.countplot(x='is_spam', data=spambase)\n",
+    "ax.set_xticklabels(['Ham', 'Spam'])\n",
+    "plt.xlabel('')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -319,7 +332,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase_binary = spambase.copy(deep=True)\n"
    ]
   },
   {
@@ -337,7 +351,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase_binary[spambase_binary > 0] = 1\n"
    ]
   },
   {
@@ -355,7 +370,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "spambase_binary.tail(5)\n"
    ]
   },
   {
@@ -389,7 +405,19 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "words_of_interest = ['word_freq_' + word for word in ['make', 'internet', 'edu']]\n",
+    "n_words = len(words_of_interest)\n",
+    "plt.subplots(n_words, figsize=(8,10))\n",
+    "for i, word in enumerate(words_of_interest):\n",
+    "    plt.subplot(n_words,1,i+1)\n",
+    "    # Grey colour chosen such that the meaning of 1 and 0 is\n",
+    "    # not confused between plots. It is good practice to use\n",
+    "    # colour only when it is meaningful, and to not mix \n",
+    "    # colour meanings between similar plots\n",
+    "    sns.countplot(x=word, data=spambase_binary, color='Gray') \n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -407,7 +435,15 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "words_of_interest = ['word_freq_' + word for word in ['make', 'internet', 'edu']]\n",
+    "n_words = len(words_of_interest)\n",
+    "plt.subplots(n_words, figsize=(8,10))\n",
+    "for ii, word in enumerate(words_of_interest):\n",
+    "    plt.subplot(n_words, 1, ii+1)\n",
+    "    sns.countplot(x=word, hue='is_spam', data=spambase_binary)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -457,7 +493,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "X = spambase_binary.drop('is_spam', axis=1)\n"
    ]
   },
   {
@@ -475,7 +512,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "y = spambase_binary['is_spam']\n"
    ]
   },
   {
@@ -493,7 +531,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "print('Input features shape: {}'.format(X.shape))\n",
+    "print('Targets shape: {}'.format(y.shape))\n"
    ]
   },
   {
@@ -513,7 +553,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "mnb = MultinomialNB()\n",
+    "mnb.fit(X=X, y=y)\n"
    ]
   },
   {
@@ -556,7 +598,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "'Class log-priors: {}'.format(mnb.class_log_prior_)\n"
    ]
   },
   {
@@ -574,7 +617,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "tr_pred = mnb.predict(X=X)\n"
    ]
   },
   {
@@ -592,7 +636,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "ca = accuracy_score(y, mnb.predict(X)) # or ca = gnb.score(X,y)\n"
    ]
   },
   {
@@ -610,7 +655,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "cm = confusion_matrix(y, tr_pred)\n",
+    "cm\n"
    ]
   },
   {
@@ -628,7 +675,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "cm_norm = cm/cm.sum(axis=1)[:, np.newaxis]\n",
+    "cm_norm\n",
+    "## Confusion matrix has values c_ij such that true label i is predicted as label j, i.e. rows should sum to 1\n"
    ]
   },
   {
@@ -665,7 +715,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "plt.figure()\n",
+    "plot_confusion_matrix(cm_norm, classes=['ham', 'spam'])\n"
    ]
   },
   {
@@ -681,7 +733,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Your answer goes here:***"
+    "***Student needs to answer similar to below:***\n",
+    "\n",
+    "The classifier is doing well, but it's only been tested so far on the same data we used for training it, so we can't be sure that it can generalise to new examples. \n",
+    "\n",
+    "The main practical problem if we didn't make the Naive Bayes assumption (conditional independence given the label) is that we would have to estimate a full covariance matrix of size 55 X 55 (i.e. ~1500 parameters) and we only have 4000 samples, so the covariance estimate might be dominated by noise. Assuming conditional independence allows us to esimate a diagonal covariance matrix i.e. estimate a variance for each variable independently and assume all covariances between distinct variables are 0.\n"
    ]
   },
   {
@@ -709,7 +765,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Your answer goes here:***"
+    "***Student needs to answer similar to below:***\n",
+    "\n",
+    "There is a probability for each feature(/variable) conditional on each of the two outcome values, so the dimensionality should logically be (54,2) or (2,54)\n",
+    "\n"
    ]
   },
   {
@@ -727,7 +786,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "mnb.feature_log_prob_.shape\n"
    ]
   },
   {
@@ -745,7 +805,21 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "feature_names = X.columns\n",
+    "hammy_bool = mnb.feature_log_prob_[0] > mnb.feature_log_prob_[1]\n",
+    "\n",
+    "## Simple boolean selection\n",
+    "ham_features = feature_names[hammy_bool].tolist()\n",
+    "print(ham_features)\n",
+    "\n",
+    "## With np.argwhere\n",
+    "idx1 = np.argwhere(hammy_bool).squeeze().tolist()\n",
+    "print(feature_names[idx1].tolist())\n",
+    "\n",
+    "## with list comprehension \n",
+    "idx2 = [ii for ii, x in enumerate(hammy_bool) if x]\n",
+    "print(feature_names[idx2].tolist())\n"
    ]
   },
   {
@@ -777,7 +851,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "data_path_test = os.path.join(os.getcwd(), 'datasets', 'spambase_test.csv')\n",
+    "spambase_test = pd.read_csv(data_path_test, delimiter = ',')\n"
    ]
   },
   {
@@ -795,7 +871,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "X_test = spambase_test.drop('is_spam', axis=1)\n",
+    "y_test = spambase_test['is_spam']\n"
    ]
   },
   {
@@ -813,7 +891,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "prediction = mnb.predict(X_test)\n",
+    "print('Actual label: {}\\t Prediction: {}'.format(int(y_test), int(prediction)))\n"
    ]
   },
   {
@@ -831,7 +911,17 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "#Loop until prediction is ham\n",
+    "for feat_name in ham_features:\n",
+    "    # Multiple indexing methods are available for Pandas\n",
+    "#     X_test.iloc[0][feat_name] = 1\n",
+    "#     X_test.loc[0][feat_name] = 1\n",
+    "    X_test.loc[0, feat_name] = 1\n",
+    "    prediction = mnb.predict(X_test)\n",
+    "    if prediction != y_test.iloc[0]:\n",
+    "        print('The word \"', feat_name[10:], '\" did the trick!')\n",
+    "        break\n"
    ]
   },
   {
@@ -863,7 +953,31 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "log_probs = mnb.feature_log_prob_\n",
+    "ticklabs = feature_names\n",
+    "\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.plot(log_probs.T)\n",
+    "plt.xticks(range(len(feature_names)), \n",
+    "           [f[10:] for f in ticklabs],\n",
+    "           rotation='vertical')\n",
+    "plt.show()\n",
+    "\n",
+    "# or...more fancily\n",
+    "import matplotlib as mpl\n",
+    "colour_palette = mpl.rcParams['axes.prop_cycle'].by_key()['color']\n",
+    "N = len(ticklabs)\n",
+    "ind = np.arange(N)  # the x locations for the groups\n",
+    "width = 0.35        # the width of the bars\n",
+    "fig, ax = plt.subplots(figsize=(12,6))\n",
+    "ham_rects = ax.bar(ind, log_probs[0], width, color=colour_palette[0])\n",
+    "spam_rects = ax.bar(ind + width, log_probs[1], width, color=colour_palette[1])\n",
+    "ax.set_ylabel('Log Probability')\n",
+    "ax.set_xticks(ind + width)\n",
+    "ax.set_xticklabels([f[10:] for f in ticklabs], rotation='vertical')\n",
+    "ax.legend((ham_rects[0], spam_rects[0]), ('Ham', 'Spam'), loc='best')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -881,7 +995,33 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "sort_idx = np.argsort(mnb.feature_log_prob_[0])\n",
+    "log_probs = mnb.feature_log_prob_[:, sort_idx]\n",
+    "ticklabs = feature_names[sort_idx]\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.plot(log_probs.T)\n",
+    "plt.xticks(range(len(feature_names)), \n",
+    "           [f[10:] for f in ticklabs],\n",
+    "           rotation='vertical')\n",
+    "plt.show()\n",
+    "\n",
+    "# or...more fancily\n",
+    "import matplotlib as mpl\n",
+    "colour_palette = mpl.rcParams['axes.prop_cycle'].by_key()['color']\n",
+    "N = len(ticklabs)\n",
+    "ind = np.arange(N)  # the x locations for the groups\n",
+    "width = 0.35        # the width of the bars\n",
+    "fig, ax = plt.subplots(figsize=(12,6))\n",
+    "ham_rects = ax.bar(ind, log_probs[0], width, color=colour_palette[0])\n",
+    "spam_rects = ax.bar(ind + width, log_probs[1], width, color=colour_palette[1])\n",
+    "ax.set_ylabel('Log Probability')\n",
+    "ax.set_xticks(ind + width)\n",
+    "ax.set_xticklabels([f[10:] for f in ticklabs], rotation='vertical')\n",
+    "ax.legend((ham_rects[0], spam_rects[0]), ('Ham', 'Spam'), loc='best')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -899,7 +1039,33 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "sort_idx = np.argsort(abs(mnb.feature_log_prob_[0]-mnb.feature_log_prob_[1]))\n",
+    "log_probs = mnb.feature_log_prob_[:, sort_idx]\n",
+    "ticklabs = feature_names[sort_idx]\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.plot(log_probs.T)\n",
+    "plt.xticks(range(len(feature_names)), \n",
+    "           [f[10:] for f in ticklabs],\n",
+    "           rotation='vertical')\n",
+    "plt.show()\n",
+    "\n",
+    "# or...more fancily\n",
+    "import matplotlib as mpl\n",
+    "colour_palette = mpl.rcParams['axes.prop_cycle'].by_key()['color']\n",
+    "N = len(ticklabs)\n",
+    "ind = np.arange(N)  # the x locations for the groups\n",
+    "width = 0.35        # the width of the bars\n",
+    "fig, ax = plt.subplots(figsize=(12,6))\n",
+    "ham_rects = ax.bar(ind, log_probs[0], width, color=colour_palette[0])\n",
+    "spam_rects = ax.bar(ind + width, log_probs[1], width, color=colour_palette[1])\n",
+    "ax.set_ylabel('Log Probability')\n",
+    "ax.set_xticks(ind + width)\n",
+    "ax.set_xticklabels([f[10:] for f in ticklabs], rotation='vertical')\n",
+    "ax.legend((ham_rects[0], spam_rects[0]), ('Ham', 'Spam'), loc='best')\n",
+    "plt.show()\n"
    ]
   }
  ],
