--- a/Labs/00 - Introduction (Solutions).ipynb
+++ b/Labs/00 - Introduction (Solutions).ipynb
@@ -2681,7 +2681,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.__version__\n"
    ]
   },
   {
@@ -2700,7 +2701,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.zeros(5)\n"
    ]
   },
   {
@@ -2719,7 +2721,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "a = np.zeros(5, dtype=int)\n",
+    "a[2] = 1\n",
+    "a\n"
    ]
   },
   {
@@ -2738,7 +2743,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.arange(10)\n"
    ]
   },
   {
@@ -2757,7 +2763,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.arange(10, 30)\n"
    ]
   },
   {
@@ -2776,7 +2783,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.arange(0, 10)[::-1]\n"
    ]
   },
   {
@@ -2795,7 +2803,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.zeros((5, 3))\n"
    ]
   },
   {
@@ -2819,7 +2828,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "a = np.arange(9).reshape(3,3)\n",
+    "a.T\n"
    ]
   },
   {
@@ -2838,7 +2849,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.eye(3)\n"
    ]
   },
   {
@@ -2857,7 +2869,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.random.randn(2, 2, 2)\n"
    ]
   },
   {
@@ -2876,7 +2889,11 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "a = np.random.randn(5, 4)\n",
+    "print(a)\n",
+    "print(\"Minimum: \", np.min(a))\n",
+    "print(\"Maximum: \", np.max(a))\n"
    ]
   },
   {
@@ -2895,7 +2912,12 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "idx = a.argmax()    # or...\n",
+    "idx = np.argmax(a)  # ...are acceptable...but a[idx] would fail\n",
+    "np.unravel_index(a.argmax(), a.shape)  # converts the number into a coordinate\n",
+    "# Alternatively\n",
+    "np.where(a == a.max())\n"
    ]
   },
   {
@@ -2914,7 +2936,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.mean(a)\n"
    ]
   },
   {
@@ -2933,7 +2956,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.mean(a, axis=1)\n"
    ]
   },
   {
@@ -2952,7 +2976,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "np.mean(a, axis=0)\n"
    ]
   },
   {
@@ -2971,7 +2996,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "a = [2.2, 3.5, 0, 4, 0.]\n",
+    "a = np.asarray(a)  # or np.array(a)\n",
+    "np.nonzero(a)\n"
    ]
   },
   {
@@ -2990,7 +3018,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "a = np.random.randn(5, 4)\n",
+    "b = np.random.randn(4, 2)\n",
+    "np.dot(a,b)\n"
    ]
   },
   {
@@ -3009,7 +3040,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "a = np.random.randn(5, 3)\n",
+    "b = np.random.randn(3)\n",
+    "a + b\n"
    ]
   },
   {
@@ -3035,7 +3069,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "credit_path = os.path.join(os.getcwd(), 'datasets', 'credit.csv')\n",
+    "credit = pd.read_csv(credit_path)\n",
+    "credit.info()\n"
    ]
   },
   {
@@ -3054,7 +3091,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "credit.describe()\n"
    ]
   },
   {
@@ -3073,7 +3111,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "credit.tail(6)\n"
    ]
   },
   {
@@ -3092,7 +3131,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "credit.iloc[4]\n"
    ]
   },
   {
@@ -3111,7 +3151,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "credit['CreditAmount'].values.std()\n"
    ]
   },
   {
@@ -3137,7 +3178,15 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "duration = credit['Duration'].values\n",
+    "age = credit['Age'].values\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(age, duration, color='k')\n",
+    "plt.xlabel('Age', color = 'g')\n",
+    "plt.ylabel('Duration', color = 'r')\n",
+    "plt.title(\"This is a title\", size=20)\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -3156,7 +3205,16 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code goes here:"
+    "# Student needs to provide code similar to below\n",
+    "neg_age_idx = np.argwhere(age<0)\n",
+    "age = np.delete(age, neg_age_idx)\n",
+    "duration=np.delete(duration, neg_age_idx)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(age, duration, color='k')\n",
+    "plt.xlabel('Age', color = 'g')\n",
+    "plt.ylabel('Duration', color = 'r')\n",
+    "plt.title(\"This is a title\", size=20)\n",
+    "plt.show()\n"
    ]
   }
  ],
