Fixed wording ambiguities

--- a/Assignments/01_Analysis.ipynb
+++ b/Assignments/01_Analysis.ipynb
@@ -227,7 +227,8 @@
     "### ========== Question 1.3 --- [4 marks] ==========\n",
     "Familiarise yourself with the [`stripplot`](https://seaborn.github.io/generated/seaborn.stripplot.html?highlight=stripplot#seaborn.stripplot) function in `seaborn`. \n",
     "\n",
-    "1. [Code] Pick one attribute of your choice (except `class`) and display a stripplot for that attribute for dataset **A**. Demonstrate the distribution of the data separately for each class (by making appropriate use of the `x` argument in `stripplot`). Set the `jitter` argument to `True` and the `alpha` argument to an appropriate value (to add transparency). When the jitter parameter is enabled a small amount of noise is added to the data so that there is less overlap and the distribution is easier to visualise. \n",
+    "1. [Code] Pick one attribute of your choice (except `class`) and display a stripplot for that attribute for the raw dataset. Demonstrate the distribution of the data separately for each class (by making appropriate use of the `x` argument in `stripplot`). Set the `jitter` argument to `True` and the `alpha` argument to an appropriate value (to add transparency to better visualise your model). When the jitter parameter is enabled a small amount of noise is added to the data so that there is less overlap and the distribution is easier to visualise. \n",
+    " ***N.B.*** *If for some reason, the alpha parameter does not work for you, then ignore it.*\n",
     "\n",
     "1. [Text] Mention anything peculiar you observe in the Data."
    ]
