--- a/Assignments/02_LinearRegression.ipynb
+++ b/Assignments/02_LinearRegression.ipynb
@@ -368,7 +368,7 @@
     "<a id='question_2_5'></a>\n",
     "### ========== Question 2.5 --- [7 marks] ==========\n",
     "Now we want to build a simple linear regression model. We will use Scikit-learn's [`LinearRegression`](http://scikit-learn.org/0.19/modules/generated/sklearn.linear_model.LinearRegression.html) class. \n",
-    "1. [Code] Train a `LinearRegression` model and report its parameters.\n",
+    "1. [Code] Train a `LinearRegression` model and report its parameters: ***N.B.*** *Here we mean the weights of the Regression  Function*.\n",
     "1. [Text] Interpret the result, and comment on what impact this has *if any* on the relevance of the `engine-power` attribute to predict the `price`."
    ]
   },
