--- a/Assignments/02_LinearRegression.ipynb
+++ b/Assignments/02_LinearRegression.ipynb
@@ -235,12 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(4) #STARTHIDE#\n",
-    "\n",
-    "[2 Marks] Identify at least 2 pairs which appear correlated. Some examples are: \n",
-    "  * `length` and `wheel base`\n",
-    "  * `width` and `wheel-base`\n",
-    "  * `engine-power` and `length`"
+    "(4) ***Your answer goes here:***"
    ]
   },
   {
@@ -616,11 +611,7 @@
    },
    "outputs": [],
    "source": [
-    "# (1) #STARTHIDE#\n",
-    "# [2 Marks] - Plot histogram with labels\n",
-    "ax = sns.scatterplot(auto_numeric['engine-size'], auto_numeric['price'])\n",
-    "ax.set_ylabel('Price')\n",
-    "ax.set_title('Engine-size')"
+    "# (1) # Your Code goes here:"
    ]
   },
   {
