--- a/Assignments/02_LinearRegression.ipynb
+++ b/Assignments/02_LinearRegression.ipynb
@@ -195,7 +195,7 @@
     "\n",
     "1. [Code] Analyse first the relationship between each attribute and price:\n",
     "  1. Compute the correlation coefficient between each attribute and price, *and*\n",
-    "  1. Visualise the distribution of each attribute with price\n",
+    "  1. Visualise the (pairwise) distribution of each attribute with price\n",
     "1. [Text] Given the above, which attributes do you feel may be most useful in predicting the price? (mention at least 5). How did you reach this conclusion? *Hint: which is the more useful of the above tools?*\n",
     "1. [Code] Now we will analyse the relationship between the attributes themselves. Use an appropriate pairwise visualisation tool to display graphically the relationship between each pair of attributes you selected in (2).\n",
     "1. [Text] Do any attributes exhibit significant correlations between one-another? (restrict your analysis to useful attributes identified above)\n",
@@ -599,7 +599,7 @@
    "source": [
     "### ========== Question 3.2 --- [4 marks] ==========\n",
     "\n",
-    "1. [Code] Examine the scatter plot of `engine-size` vs `price` again (plot again below)\n",
+    "1. [Code] Examine the scatter plot of `engine-size` vs `price` (plot below)\n",
     "1. [Text] Why might this cause a problem for linear regression? "
    ]
   },
