--- a/Assignments/01_Analysis.ipynb
+++ b/Assignments/01_Analysis.ipynb
@@ -520,7 +520,7 @@
     "\n",
     "1. [Code] Also, reevaluate the performance of the baseline on the test data.\n",
     "\n",
-    "1. [Text] In a short paragraph (3-4 sentences) compare and comment on the results with the training data/baseline."
+    "1. [Text] In a short paragraph (3-4 sentences) compare and comment on the results with (a) the training data and (b) the baseline (on the test data)."
    ]
   },
   {
