--- a/Assignments/02_LinearRegression.ipynb
+++ b/Assignments/02_LinearRegression.ipynb
@@ -629,7 +629,7 @@
     "### ========== Question 3.3 --- [10 marks] ==========\n",
     "In class we discussed ways of preprocessing features to improve performance in such cases.\n",
     "1. [Code] Transform the `engine-size` attribute using an appropriate technique from the lectures (document it in your code) and show the transformed data (scatter plot).\n",
-    "1. [Code] Then retrain a (Multi-variate) LinearRegression Model and report $R^2$ and RMSE. \n",
+    "1. [Code] Then retrain a (Multi-variate) LinearRegression Model (on all the attributes including the transformed `engine-size`) and report $R^2$ and RMSE. \n",
     "1. [Text] How has the performance of the model changed when compared to the previous result? and why so significantly?"
    ]
   },
