Minor Typo in A2, Fixed DataSets for A3, Fixed bug in plotter.py

--- a/Assignments/02_LinearRegression.ipynb
+++ b/Assignments/02_LinearRegression.ipynb
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Your answer goes here:***"
+    "(3) ***Your answer goes here:***"
    ]
   },
   {
