Removed Course Code from Title in Assignment

--- a/Assignments/04_A_KMeans.ipynb
+++ b/Assignments/04_A_KMeans.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introductory applied machine learning (INFR10069)\n",
-    "# Assignment 4: Unsupervised Learning Part A (KMeans Clustering)"
+    "# Introductory applied machine learning\n",
+    "# Assignment 4: Unsupervised Learning Part A (KMeans Clustering) [50%]"
    ]
   },
   {
