--- a/Assignments/04_B_PCA.ipynb
+++ b/Assignments/04_B_PCA.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introductory applied machine learning (INFR10069)\n",
-    "# Assignment 4: Unsupervised Learning Part B (PCA)"
+    "# Introductory applied machine learning\n",
+    "# Assignment 4: Unsupervised Learning Part B (PCA) [50%]"
    ]
   },
   {
